[gd_scene load_steps=12 format=2]

[ext_resource path="res://code/game.gd" type="Script" id=1]
[ext_resource path="res://sprites/Status1.png" type="Texture" id=2]
[ext_resource path="res://sprites/Status2.png" type="Texture" id=3]
[ext_resource path="res://sprites/Status3.png" type="Texture" id=4]
[ext_resource path="res://sprites/Status4.png" type="Texture" id=5]
[ext_resource path="res://code/character.gd" type="Script" id=6]
[ext_resource path="res://sprites/RobotoMono-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://sprites/RobotoMono-Bold.ttf" type="DynamicFontData" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 2 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 34
outline_color = Color( 0.921569, 0.807843, 0.368627, 1 )
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 8 )

[node name="Experience" type="Node2D" groups=[
"Persist",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 135.912, 117.789 )
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
speed_scale = 1.8
playing = true
script = ExtResource( 6 )

[node name="Interface" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Interface"]
margin_left = 263.882
margin_top = 43.4971
margin_right = 343.882
margin_bottom = 89.4971
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.964706, 0.741176, 0.25098, 1 )
text = "Text"

[node name="ColorRect" type="ColorRect" parent="Interface"]
margin_left = 94.0
margin_top = 282.0
margin_right = 660.0
margin_bottom = 335.0
color = Color( 0.2, 0.2, 0.2, 1 )

[node name="XPBar" type="ColorRect" parent="Interface/ColorRect"]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 10.0
margin_top = -19.5
margin_right = 559.0
margin_bottom = 20.5
color = Color( 0.501961, 0.8, 0.792157, 1 )

[node name="Button" type="Button" parent="Interface"]
margin_left = 682.201
margin_top = 210.569
margin_right = 806.201
margin_bottom = 334.569
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.937255, 0.611765, 0.0509804, 1 )
custom_colors/font_color = Color( 0.921569, 0.552941, 0.0627451, 1 )
text = "[Level-Up]"
flat = true

[node name="Save" type="Button" parent="Interface"]
margin_left = 684.887
margin_top = 288.995
margin_right = 826.887
margin_bottom = 412.995
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.937255, 0.611765, 0.0509804, 1 )
custom_colors/font_color = Color( 0.921569, 0.552941, 0.0627451, 1 )
text = "[Save]"
flat = true

[node name="Load" type="Button" parent="Interface"]
margin_left = 685.667
margin_top = 361.524
margin_right = 827.667
margin_bottom = 485.524
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.937255, 0.611765, 0.0509804, 1 )
custom_colors/font_color = Color( 0.921569, 0.552941, 0.0627451, 1 )
text = "[Load]"
flat = true

[node name="DICT" type="Button" parent="Interface"]
margin_left = 94.5231
margin_top = 408.316
margin_right = 236.523
margin_bottom = 532.316
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.937255, 0.611765, 0.0509804, 1 )
custom_colors/font_color = Color( 0.921569, 0.552941, 0.0627451, 1 )
text = "[Test Dict]"
flat = true
[connection signal="pressed" from="Interface/Button" to="." method="_on_LEVELButton_pressed"]
[connection signal="pressed" from="Interface/Save" to="." method="_on_Save_pressed"]
[connection signal="pressed" from="Interface/Load" to="." method="_on_Load_pressed"]
[connection signal="pressed" from="Interface/DICT" to="." method="_on_DICT_pressed"]
